[gd_scene load_steps=5 format=3 uid="uid://07iis7g288rv"]

[ext_resource type="Texture2D" uid="uid://cc75i0uav33kv" path="res://assets/background.png" id="1_2i5r0"]
[ext_resource type="Script" path="res://scenes/settings.gd" id="2_8a75h"]
[ext_resource type="Texture2D" uid="uid://cobwiu4nmp2k0" path="res://assets/badges/blank_badge.webp" id="3_ndrdx"]
[ext_resource type="Script" path="res://scenes/close_settings_button.gd" id="3_p6i7h"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_2i5r0")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
script = ExtResource("2_8a75h")

[node name="BadgeScaleLable" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 24
text = "Badge Size: 1"
fit_content = true
scroll_active = false

[node name="BadgeScaleSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Add Badges"
icon = ExtResource("3_ndrdx")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 28
text = "Close Settings"
script = ExtResource("3_p6i7h")

[connection signal="value_changed" from="CenterContainer/VBoxContainer/BadgeScaleSlider" to="CenterContainer/VBoxContainer" method="_on_badge_scale_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="CenterContainer/VBoxContainer" method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
